development_pc/.metadata/.plugins/org.eclipse.cdt.ui/motor_test.build.log
16:00:28 **** Incremental Build of configuration Debug for project motor_test ****
make -j6 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G0B1xx -c -I../Core/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:80:2: warning: statement with no effect [-Wunused-value]
   80 |  000 HAL_Init();
      |  ^~~
../Core/Src/main.c:80:5: error: expected ';' before 'HAL_Init'
   80 |  000 HAL_Init();
      |     ^~~~~~~~~
      |     ;
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j6 all" terminated with exit code 2. Build might be incomplete.

16:00:28 Build Failed. 2 errors, 1 warnings. (took 362ms)

